--- a/src/app/pages/autification/pages/register/register.component.html
+++ b/src/app/pages/autification/pages/register/register.component.html
@@ -1,1 +1,58 @@
-<p>register works!</p>
+<main class="ui container">
+  <div [formGroup]="formRegister" class="grid centered ui form error">
+    <div class="field required row"
+         [ngClass]="(formRegister.controls['firstName'].invalid && formRegister.controls['firstName'].touched) ? 'error' : ''">
+      <label>Enter your firstName</label>
+      <input type="text" formControlName="firstName">
+      <p *ngIf="formRegister.controls['firstName'].invalid && formRegister.controls['firstName'].touched"
+         class="sixteen column ui error message">Field is required</p>
+    </div>
+
+    <div class="field wide required row"
+         [ngClass]="(formRegister.controls['lastName'].invalid && formRegister.controls['lastName'].touched) ? 'error' : ''">
+      <label>Enter your lastName</label>
+      <input type="text" formControlName="lastName">
+      <p *ngIf="formRegister.controls['lastName'].invalid && formRegister.controls['lastName'].touched"
+         class="ui pointing red basic label">Field is required</p>
+    </div>
+
+    <div class="field wide required row"
+         [ngClass]="(formRegister.controls['email'].invalid && formRegister.controls['email'].touched) ? 'error' : ''">
+      <label>Enter your email</label>
+      <input type="text" formControlName="email">
+      <p *ngIf="formRegister.controls['email'].invalid && formRegister.controls['email'].touched"
+         class="ui pointing red basic label">Field is required</p>
+    </div>
+
+    <div class="field required row"
+         [ngClass]="(formRegister.controls['password'].invalid && formRegister.controls['password'].touched) ? 'error' : ''">
+      <label>Enter your password</label>
+      <input [type]="hide ? 'password' : 'text'"
+             formControlName="password">
+      <button class="ui button" (click)="shownPassword()">
+        <i *ngIf="hide" class="eye slash icon"></i>
+        <i *ngIf="!hide" class="eye icon"></i>
+      </button>
+      <p class="ui pointing red basic label"
+         *ngIf="formRegister.controls['password'].invalid && formRegister.controls['password'].touched">Field is required</p>
+    </div>
+
+    <div class="field row">
+      <label>Enter your confirmPassword</label>
+      <input [type]="hideConfirm ? 'password' : 'text'"
+             formControlName="confirmPassword">
+      <button class="ui button" (click)="shownConfirmPassword()">
+        <i *ngIf="hideConfirm" class="eye slash icon"></i>
+        <i *ngIf="!hideConfirm" class="eye icon"></i>
+      </button>
+      <p class="ui pointing red basic label"
+         *ngIf="formRegister.controls['confirmPassword'].invalid && formRegister.controls['confirmPassword'].touched">Field is required</p>
+    </div>
+
+    <div *ngIf="errorMessage">
+      <p>{{ errorMessage }}</p>
+    </div>
+
+    <button class="ui button" (click)="singUp()">Sign In</button>
+  </div>
+</main>
