--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+.button-default {
+  width: 100%;
+  height: 51px;
+  background: #fca702 !important;
+  color: #fff !important;
+  padding: 12px 0 !important;
+  border: none !important;
+  border-radius: 8px !important;
+  font-weight: 600 !important;
+  box-shadow: 0 3px 24px rgba(0, 0, 0, 0.1) !important;
+  transition: 0.5s !important;
+  font-family: inherit !important;
+  font-style: normal !important;
+  font-size: 16px !important;
+  line-height: 1.8 !important;
+  margin-top: 15px !important;
+  transition: background-color 0.5s linear !important;
+}
+
+.button-default:hover {
+  background: #051242 !important;
+}
+
+a {
+  color: #fca702 !important;
+  transition: color 0.5s linear !important;
+  font-size: 16px;
+  float: right;
+}
+
+a:hover {
+  color: #14212b !important;
+}
+
+input:focus {
+  border: 1px solid #fca702  !important;
+}
+
+.center-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
