--- a/src/app/shared/components/louder/loader/loader.component.html
+++ b/src/app/shared/components/louder/loader/loader.component.html
@@ -1,3 +1,6 @@
-<div *ngIf="loading">
-  <mat-spinner></mat-spinner>
+<div *ngIf="loading" class="loading-center">
+  <div>
+    <mat-spinner color="accent"></mat-spinner>
+    <p style="color: #fca702">Loading...</p>
+  </div>
 </div>
