--- a/src/app/shared/components/louder/loader/loader.component.html
+++ b/src/app/shared/components/louder/loader/loader.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="loading" class="loading-center">
   <div>
-    <mat-spinner color="accent"></mat-spinner>
-    <p style="color: #fca702">Loading...</p>
+    <mat-spinner></mat-spinner>
+    <p>Loading...</p>
   </div>
 </div>
