--- a/src/app/pages/home/components/card-tour/card-tour.component.html
+++ b/src/app/pages/home/components/card-tour/card-tour.component.html
@@ -1,6 +1,6 @@
-<mat-card>
+<mat-card class="card-item">
   <mat-card-content>
-    <img width="100"
+    <img class="card-picture"
       [src]="cardTour?.propertyImage?.image?.url" alt="">
     <div>
       <p></p>
@@ -9,4 +9,5 @@
     <p>Star: {{ cardTour?.star }}  ({{ cardTour?.reviews?.total }} Reviews)</p>
     <p><span>{{cardTour?.mapMarker?.label}}/per person</span></p>
   </mat-card-content>
+  <button class="card-button" mat-raised-button color="accent">Detail</button>
 </mat-card>
