--- a/src/app/pages/home/components/card-tour/card-tour.component.scss
+++ b/src/app/pages/home/components/card-tour/card-tour.component.scss
@@ -1,6 +1,19 @@
+.card-item {
+  width: 100%;
+  height: 450px;
+  border-radius: 15px;
+
+}
+
 .card-picture {
   border-radius: 15px;
-  width: 371px;
-  height: 244px;
+  width: 100%;
+  height: 200px;
   transition: all 0.5s;
+}
+
+.card-button {
+  position: absolute;
+  bottom: 0;
+  margin: 10px;
 }
